Blender CRASH with alembic file #51262

Closed
opened 2017-04-20 12:38:06 +02:00 by Fran · 14 comments

System Information
Operating system and graphics card
Windows 10 with NVIDIA GeForce GTX 970
Ubuntu 16.04 LTS with NVIDIA GeForce GT 530

Blender Version
Broken: (example: 2.78, see splash screen)
Worked: (optional)

Short description of error
Blender CRASHES with alembic file import

norman11.abc

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
Just exporting alembic cache from Maya project
Import to alembic file to Blender
CRASH

**System Information** Operating system and graphics card Windows 10 with NVIDIA GeForce GTX 970 Ubuntu 16.04 LTS with NVIDIA GeForce GT 530 **Blender Version** Broken: (example: 2.78, see splash screen) Worked: (optional) **Short description of error** Blender CRASHES with alembic file import [norman11.abc](https://archive.blender.org/developer/F556445/norman11.abc) **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Just exporting alembic cache from Maya project Import to alembic file to Blender CRASH
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @foxist

Added subscriber: @foxist

Added subscribers: @dr.sybren, @Sergey

Added subscribers: @dr.sybren, @Sergey
Sybren A. Stüvel was assigned by Sergey Sharybin 2017-04-20 12:54:05 +02:00

@dr.sybren, mind having a look? Thanks!

@dr.sybren, mind having a look? Thanks!

@foxist at least give us the version of Blender you used to test. Those fields are there for a reason.

@foxist at least give us the version of Blender you used to test. Those fields are there for a reason.

The file works fine in current Master, please test with a daily build from builder.blender.org/download/

The file works fine in current Master, please test with a daily build from builder.blender.org/download/
Author

Oh Im sorry, my fault... But yes, I used the last daily build before report this problem. Just now I have downloaded the daily build again and also I have exported another alembic file from the same Maya project and the problem still persisting in Blender. Maya imports the alembic without problem, so it isn't a corrupted file though...

Windows -> Blender 2.78 Hash:6c26911
Ubuntu -> Blender 2.78 Hash:6c26911c3d

Oh Im sorry, my fault... But yes, I used the last daily build before report this problem. Just now I have downloaded the daily build again and also I have exported another alembic file from the same Maya project and the problem still persisting in Blender. Maya imports the alembic without problem, so it isn't a corrupted file though... Windows -> Blender 2.78 Hash:6c26911 Ubuntu -> Blender 2.78 Hash:6c26911c3d

Then attach the crashing file to this ticket, otherwise we can't investigate the issue.

Then attach the crashing file to this ticket, otherwise we can't investigate the issue.
Author

It's the alembic from the opening post that crash Blender, I only was telling before that Maya imports this alembic file pefectly, just to check may the alembic file itself wouldn't be corrupted or bad exported, which is not the case, but Blender still doesn't work with this alembic file.

So, I have downloaded the last build again-> 2.78 Hash: e4ab70d

In Ubuntu works perfectly now!, but the problem still on windows 10, I just import the alembic and Windows close Blender, there is no more... screen.png

It's the alembic from the opening post that crash Blender, I only was telling before that Maya imports this alembic file pefectly, just to check may the alembic file itself wouldn't be corrupted or bad exported, which is not the case, but Blender still doesn't work with this alembic file. So, I have downloaded the last build again-> 2.78 Hash: e4ab70d In Ubuntu works perfectly now!, but the problem still on windows 10, I just import the alembic and Windows close Blender, there is no more... ![screen.png](https://archive.blender.org/developer/F564753/screen.png)
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

In #51262#429683, @dr.sybren wrote:
Then attach the crashing file to this ticket, otherwise we can't investigate the issue.

I Can repro on windows easily with the file from the opening post, asan on linux should be able to catch this one as well i suppose. You're overflowing a buffer here

https://git.blender.org/gitweb/gitweb.cgi/blender.git/blob/HEAD:/source/blender/alembic/intern/alembic_capi.cc#l545

abc_path->path is a char[1024]
full_name is 1121 characters
PATH_MAX is 4096

so yeah...

boom

> In #51262#429683, @dr.sybren wrote: > Then attach the crashing file to this ticket, otherwise we can't investigate the issue. I Can repro on windows easily with the file from the opening post, asan on linux should be able to catch this one as well i suppose. You're overflowing a buffer here https://git.blender.org/gitweb/gitweb.cgi/blender.git/blob/HEAD:/source/blender/alembic/intern/alembic_capi.cc#l545 abc_path->path is a char[1024] full_name is 1121 characters PATH_MAX is 4096 so yeah... *boom*

Thanks for catching this @LazyDodo. Indeed, Asan picked it up too.

Thanks for catching this @LazyDodo. Indeed, Asan picked it up too.

This issue was referenced by 3128600a8a

This issue was referenced by 3128600a8ab2badd9ea39c80133f15f766794ec6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51262
No description provided.