Fix T51262: Blender CRASH with alembic file

Also added a unit test for exporting & importing very long names.